# QT-Cube-Demo

./: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h  mpu6050.cpp  mpu6050.hpp
